@@ -259,7 +259,7 @@ public class SpreadsheetService {
             // maybe go back to this later, currently it will be tripped up by a spreadsheet querying from more than one DB
             //if (!cellsAndHeadingsForDisplay.getOptions().noSave) {
             DatabaseAccessToken databaseAccessToken = loggedInUser.getDataAccessToken();
-            final String result = RMIClient.getServerInterface(databaseAccessToken.getServerIp()).saveData(databaseAccessToken, cellsAndHeadingsForDisplay, loggedInUser.getUser().getName(), reportName, loggedInUser.getContext(), persist);
+            final String result = RMIClient.getServerInterface(databaseAccessToken.getServerIp()).saveData(databaseAccessToken, cellsAndHeadingsForDisplay, loggedInUser.getUser().getEmail(), reportName, loggedInUser.getContext(), persist);
             if (result.startsWith("true")) { // then reset the cells and headings object to reflect the changed state
                 for (List<CellForDisplay> row : cellsAndHeadingsForDisplay.getData()) {
                     for (CellForDisplay cell : row) {
